--- a/src/app/home/pr/pr.component.html
+++ b/src/app/home/pr/pr.component.html
@@ -18,7 +18,7 @@
 
 
 <mat-card-content class="track-cont" *ngIf="userM && userM[0].tracker">
-  <mat-list>
+ <!--  <mat-list> -->
     <mat-icon mat-list-icon>fitness_center</mat-icon>
     <mat-list-item *ngFor="let item of userM[0].tracker | keyvalue">
       <div mat-line>{{ item.key }}: {{ item.value }}</div>
@@ -28,5 +28,5 @@
        <mat-icon mat-list-icon>fitness_center</mat-icon> -->
    <!--   <div mat-line>{{ item.key }}</div>
       <div mat-line class="secondary">Valeur: {{ item.value }}</div> -->
-  </mat-list>
+ <!--  </mat-list> -->
 </mat-card-content>
