--- a/src/app/home/pr/pr.component.scss
+++ b/src/app/home/pr/pr.component.scss
@@ -1,7 +1,8 @@
 .track-cont{
-  border: 4px solid orange;
+  border: 4px solid blue;
+   :hover{background-color: lightgrey;}
 }
 .mat-list-item {
-  padding: 10px;
-  border-bottom: 1px solid #e0e0e0; /* Ajout d'une ligne séparatrice */
+  //padding: 10px;
+  //border-bottom: 1px solid #e0e0e0; /* Ajout d'une ligne séparatrice */
 }
