--- a/src/app/train/training-menu/training-menu.component.scss
+++ b/src/app/train/training-menu/training-menu.component.scss
@@ -5,7 +5,7 @@
 mat-list-item {
   margin: 10px ;
   //padding:auto;
-  border: 4px solid red;
+  border: 4px solid grey;
   //transform: translate(-50%, -50%);
   transition: transform 300ms ease;
   &:hover {
