small trecker and shell

--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -34,7 +34,7 @@
 
       <span class="fill-space"></span>
       <div class ="main-menu"> <!-- *ngIf="!(isHandset$ | async)" -->
-        <a mat-button routerLink="/kanban">🍱 Training</a>
+        <a mat-button routerLink="/training">🍱 Training</a>
         <a mat-button routerLink="/followers">⚡ Followers</a>
 
         <a mat-button routerLink="/login">🔑 Tracker</a>
