--- a/src/app/home/small-tracker/small-tracker.component.scss
+++ b/src/app/home/small-tracker/small-tracker.component.scss
@@ -1,10 +1,10 @@
 mat-grid-tile{
-  border:2px solid red;
+  border:2px solid rgb(27, 2, 2);
 
 }
 .small-tracker{
   //width:30vw;
-  border:2px solid red;
+  border:2px solid black;
 }
 /* mat-card-content{
   width:auto;
@@ -19,15 +19,15 @@ mat-grid-tile{
   /* max-width: 26%; */
   width:auto;
   margin:10px;
-  border:4px solid violet;
+  border:4px solid lightcyan;
 
 }
 .secondary-card-items:hover{
-  background-color: lightgreen;
+  background-color: lightgrey;
 }
 .user-content{
   //margin:34px;
-  border:2px solid red;
+  border:2px solid blue;
   white-space: normal;
   word-wrap: break-word; /* Force le retour à la ligne quand le texte est trop long */
   //overflow-wrap: break-word;
