--- a/src/app/performance/performances-list/performances-list.component.scss
+++ b/src/app/performance/performances-list/performances-list.component.scss
@@ -1,28 +1,34 @@
 mat-list-item {
   margin-top: 10px;
-  //flex-direction: row;
-  margin-right:20px;
-  margin-left:20px;
-  //padding:auto;
+  margin-right: 20px;
+  margin-left: 20px;
   border: 4px solid grey;
-  //transform: translate(-50%, -50%);
   transition: transform 300ms ease;
+
   &:hover {
-      transform: translateY(-3px);
+    transform: translateY(-3px);
   }
+
   transition: transform 300ms ease;
 
 }
-mat-list{
-  border:2px solid pink;
+
+mat-list {
+  border: 2px solid pink;
   size: auto;
   //display: flex;
 }
 
+.add-button{
+  margin-bottom: 10px;
+}
+
 .row-success {
-  background-color: #d4edda; /* Vert clair */
+  background-color: #d4edda;
+  /* Vert clair */
 }
 
 .row-failure {
-  background-color: #f8d7da; /* Rouge clair */
+  background-color: #f8d7da;
+  /* Rouge clair */
 }
