--- a/src/app/performance/dialogs/perf-dialog.scss
+++ b/src/app/performance/dialogs/perf-dialog.scss
@@ -1,39 +1,24 @@
-/* h1{
-  margin-left:2vw;
-} */
 .content {
   overflow: auto;
   height: auto;
   padding: 20px;
   width: 100%;
-/*   display:flex;
-  flex-direction:column; */
 }
 .toggle{
 
 }
-/* .content {
-  overflow: hidden;
-  height: auto;
-  padding: 20px;
-  width: 100%;
-} */
+
 .fields{
   display:flex;
   flex-direction: column;
-  margin-top:2vw;
-
+  //margin-top:1vw;
 }
 .first{
-/*   height:20px;
-  border:2px black;
-  background-color: red;
-  width:20px; */
-  //margin:2vw;
+  size: auto;
 }
 .perf_sucess{
   margin-right:1vw;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 .perf_sucess > h4{
   margin-right:0px;
