--- a/src/app/performance/performances-list/performances-list.component.html
+++ b/src/app/performance/performances-list/performances-list.component.html
@@ -12,20 +12,27 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="demo-perf_value">
-    <th mat-header-cell *matHeaderCellDef> Weight</th>
+    <th mat-header-cell *matHeaderCellDef> Weight (kg) </th>
     <td mat-cell *matCellDef="let element"> {{element.perf_value_kg}} </td>
+  </ng-container>
+
+    <!-- Reps Column -->
+  <ng-container matColumnDef="demo-perf_reps">
+    <th mat-header-cell *matHeaderCellDef> Reps </th>
+    <td mat-cell *matCellDef="let element"> {{element.perf_reps}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="demo-perf_date">
     <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.perf_date}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.perf_date2}} </td>
   </ng-container>
+
 
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let myrow; columns: displayedColumns"
-  [ngClass]="{'row-success': myrow.sucess, 'row-failure': !myrow.sucess}"
+  [ngClass]="{'row-success': myrow.perf_sucess, 'row-failure': !myrow.perf_sucess}"
   ></tr>
 </table>
 
