--- a/src/app/performance/performances-list/performances-list.component.scss
+++ b/src/app/performance/performances-list/performances-list.component.scss
@@ -32,3 +32,13 @@ mat-list {
   background-color: #f8d7da;
   /* Rouge clair */
 }
+
+/* .del-button {
+  background-color: aquamarine;
+  border: 4px solid black;
+} */
+
+/* app-delete-button {
+  background-color: aquamarine;
+  border: 4px solid black;
+} */
