--- a/src/app/home/menu/menu.component.scss
+++ b/src/app/home/menu/menu.component.scss
@@ -1,25 +1,47 @@
 .menu-container{
   display:flex;
+  size:auto;
   flex-direction:row;
   margin: 2vw;
-  border: 4px solid red;
+  border: 4px solid black;
 }
-
+@media (max-width: 750px) { /* Vous pouvez ajuster la largeur en fonction de vos besoins */
+  .menu-container {
+    flex-direction: column;
+    border: 4px solid red;
+  }
+}
 .menu-container > div{
   margin: 2vw;
 }
 .menu-pr{
   //margin-right: 1vw;
   flex:1 1 auto;
+  size:auto;
 
 }
 .menu-profile{
   flex:1 1 auto;
 }
-.training-button{
+ .training-button{
+  border:2px solid black;
+  margin:2vw;
+  margin-bottom:2px;
+  :hover {background-color: red}
+}
+
+.performance-button {
+  border:2px solid black;
+  margin:2vw;
+  margin-top:1vw;
+}
+
+.menu-buttons{
   flex: 1 1 auto;
   border:2px solid black;
   margin-top:2vw;
+  display:flex;
+  flex-direction:column;
 }
 
 
