Fix: Modify delete button

--- a/src/app/shared/delete-button/delete-button.component.html
+++ b/src/app/shared/delete-button/delete-button.component.html
@@ -2,7 +2,7 @@
 
 
 
-<button mat-stroked-button color ="warn" (click)="canDelete ? deleteExercice(): prepareForDelete()">
+<button mat-stroked-button color="del-button" background-color="black" (click)="canDelete ? deleteExercice(): prepareForDelete()">
 
   <mat-icon>
     delete
