--- a/src/app/home/menu/menu.component.scss
+++ b/src/app/home/menu/menu.component.scss
@@ -9,19 +9,33 @@
   .menu-container {
     flex-direction: column;
     border: 4px solid red;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 }
+
+.menu-container {
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .menu-container > div{
   margin: 2vw;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-.menu-pr{
+ .menu-pr{
   //margin-right: 1vw;
   flex:1 1 auto;
-  size:auto;
+  //size:auto;
+  //border-radius: 15px;
+  //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 }
 .menu-profile{
   flex:1 1 auto;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
  .training-button{
   border:2px solid black;
@@ -42,6 +56,8 @@
   margin-top:2vw;
   display:flex;
   flex-direction:column;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 
