Fix: Small tracker and Performance

--- a/src/app/home/small-tracker/small-tracker.component.scss
+++ b/src/app/home/small-tracker/small-tracker.component.scss
@@ -5,6 +5,8 @@ mat-grid-tile{
 .small-tracker{
   //width:30vw;
   border:2px solid black;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 /* mat-card-content{
   width:auto;
