--- a/src/app/home/pr/pr.component.scss
+++ b/src/app/home/pr/pr.component.scss
@@ -1,6 +1,8 @@
 .track-cont{
   border: 4px solid blue;
    :hover{background-color: lightgrey;}
+   border-radius: 15px;
+   //box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .mat-list-item {
   //padding: 10px;
