Fix: login and shell routing

--- a/src/app/shared/shell/shell.component.html
+++ b/src/app/shared/shell/shell.component.html
@@ -37,7 +37,7 @@
         <a mat-button routerLink="/training">🍱 Training</a>
         <a mat-button routerLink="/followers">⚡ Followers</a>
 
-        <a mat-button routerLink="/login">🔑 Tracker</a>
+        <a mat-button routerLink="/home">🔑 Home</a>
 
       </div>
 
@@ -52,9 +52,9 @@
           <i>💬</i>
           <span>Chat on Slack</span>
         </a>
-        <a mat-menu-item href="https://github.com/codediodeio/angular-firestarter">
+        <a mat-menu-item href="https://github.com/eliekou">
           <i>💾</i>
-          <span>Code on Github</span>
+          <span>Goat on Github</span>
         </a>
         <a mat-menu-item href="https://fireship.io/courses/angular">
           <i>🔥</i>
