--- a/src/app/user/login-page/login-page.component.html
+++ b/src/app/user/login-page/login-page.component.html
@@ -22,7 +22,7 @@
       Logged in as <strong>{{user.email}}</strong>
     </p>
     <div class="buttons">
-    <button id ="logout-button" mat-raise-button (click)="afAuth.signOut()">Logout</button>
+    <button id ="logout-button" mat-stroked-button (click)="afAuth.signOut()">Logout</button>
 
     <button id ="home-button" mat-stroked-button routerLink="/home">HOME</button>
 
