--- a/src/app/user/login-page/login-page.component.scss
+++ b/src/app/user/login-page/login-page.component.scss
@@ -18,12 +18,12 @@ button {
 .buttons{
   display:flex;
   flex-direction:column;
-  margin:4px solid orange;
+  margin:4px solid blue;
   justify-content: center;
   align-items: center;
 }
 #logout-button{
-  border:1px solid black ;
+  border:1px solid blue ;
   margin-top:2em;
   //margin:4em;
   width:10vw;
@@ -33,5 +33,5 @@ button {
   border:2px solid black;
   width:20vw;
   margin:4em;
-  background-color: orange;
+  background-color: rgb(84, 84, 239);
 }
