--- a/src/app/home/small-tracker/small-tracker.component.html
+++ b/src/app/home/small-tracker/small-tracker.component.html
@@ -4,7 +4,7 @@
 
 <mat-card class="small-tracker">
   <mat-card-header>
-    <mat-card-title *ngIf="userM">{{userM[0].name}}</mat-card-title>
+    <mat-card-title *ngIf="userM">{{userM.name}}</mat-card-title>
     <mat-card-subtitle>Beginner User</mat-card-subtitle>
     <div mat-card-avatar class="example-header-image"></div>
   </mat-card-header>
@@ -12,15 +12,15 @@
   <mat-card-content class="secondary-card" *ngIf="userM">
 
     <mat-card class ="secondary-card-items" appearance="outlined">
-      <mat-card-content class="user-content"> Ranking: {{userM[0].ranking}}</mat-card-content>
+      <mat-card-content class="user-content"> Ranking: {{userM.ranking}}</mat-card-content>
     </mat-card>
 
     <mat-card class ="secondary-card-items" appearance="outlined">
-      <mat-card-content class="user-content"> Id: {{userM[0].id}} </mat-card-content>
+      <mat-card-content class="user-content"> Id: {{userM.id}} </mat-card-content>
     </mat-card>
 
     <mat-card class ="secondary-card-items" appearance="outlined">
-      <mat-card-content class="user-content"> Points: {{userM[0].points}}</mat-card-content>
+      <mat-card-content class="user-content"> Points: {{userM.points}}</mat-card-content>
     </mat-card>
     <!-- {{userM[0].ranking}} -->
 <!--     <app-small-tracker >
